--- a/rules.yaml
+++ b/rules.yaml
@@ -35,4 +35,4 @@
 - 'DOMAIN-SUFFIX,openai.com,🇺🇸 美国01',
 - 'DOMAIN-SUFFIX,nvidia.com,🚀 节点选择',
 - 'DOMAIN-SUFFIX,jsdelivr.net,🚀 节点选择',
-- 'DOMAIN-SUFFIX,convertio.me,🚀 节点选择'- 
+- 'DOMAIN-SUFFIX,convertio.me,🚀 节点选择'
